--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible"content-"!E=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet"href="style.css">
+  <title>Hitler </title>
+  <\head>
+    <body></body>
