--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet"href="style.css">
-  <title>Hitler </title>
+  <title>"Panico" o filme</title>
   <\head>
-    <body></body>
+    <body>
+      <h1>Sobre o filme </h1>
+      <h2>Panico e um filme do gênero terror slasher, que conta a historia da protagonista Sidney uma jovem estudante que começa a reparar em 
+      alguém que está lhe stalweando e fazendo ligações ameaçadoras, o filme se desenvolve a partir desse enrendo, sendo um filme sangrento puxado
+      paraum terror mais psicologico do que um terror de sustos, sua data de estreia foi em 31 de janeiro de 1996, depois do sucesso do primeiro
+      filme varias sequencias e parodias foram feitas como "todo mundo em panico 1,2,3,4,5" e suas 5 sequencias mais pocas se destacando em qualidade quanto 
+      o primeiro. </h2>
+      <P>Acesse<a href="https://pt.wikipedia.org/wiki/Scream_1996">clicando aqui </a> </P>
+      <footer>Michel Gonsalves, Número 29, 1°B</footer>
+       </body>
